@@ -90,15 +90,19 @@ function SCComputeEnableNewItems() {
     var cal = getSelectedCalendar();
     if (cal && cal.type == "caldav") {
 //         dump("cal: " + cal.name + "\n");
-        var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
-            .getService(Components.interfaces.nsISupports)
-            .wrappedJSObject;
-        var calEntry = aclMgr.calendarEntry(cal.uri);
-        SCEnableNewItems = (calEntry.isCalendarReady()
-                            && calEntry.userCanAddComponents());
+        if (cal.readOnly)
+            SCEnableNewItems = false;
+        else {
+            var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
+                         .getService(Components.interfaces.nsISupports)
+                         .wrappedJSObject;
+            var calEntry = aclMgr.calendarEntry(cal.uri);
+            SCEnableNewItems = (calEntry.isCalendarReady()
+                                && calEntry.userCanAddComponents());
+        }
     }
     else
-        SCEnableNewItems = true;
+        SCEnableNewItems = !cal.readOnly;
 
 //     dump("enable new items: " + SCEnableNewItems + "\n");
 //     dump("  url: " + cal.uri.spec + "\n");
